--- a/test/Makefile
+++ b/test/Makefile
@@ -13,7 +13,7 @@ $(UNITY_ROOT)/extras/fixture/src/unity_fixture.c \
 	ocfg/Test_ocfg.c \
 	ocfg/test_runners/Test_ocfg_Runner.c \
 	ocfg/test_runners/all_tests.c
-INC_DIRS = -Isrc -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src -I../src
+INC_DIRS = -Isrc -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src -I../src/tools
 
 CLEANUP = rm -f build/*.o ; rm -f $(TARGET1)
 
