--- a/test/botest/Makefile
+++ b/test/botest/Makefile
@@ -15,9 +15,12 @@ $(UNITY_ROOT)/extras/fixture/src/unity_fixture.c
 SRC1 = \
     ../netfifo/test_runners/Test_fifo_Runners.c \
     ../netfifo/test_runners/all_tests.c \
-    ../netfifo/testfifonet.c
+    ../netfifo/testfifonet.c \
+    ../../src/nettcp/bo_fifo.c \
+    ../../src/tools/ocrc.c
 
-INC_DIRS = -Isrc -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src
+INC_DIRS = -Isrc -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src \
+-Isrc/nettcp -Isrc/tools
 
 
 default:
