modified:   Makefile 	modified:   src/nettcp/bo_fifo.h 	modified:   src/nettcp/bo_net.c 	modified:   src/nettcp/bo_net.h 	modified:   src/nettcp/bo_net_fifo_server.c 	modified:   test/botest/Makefile 	modified:   test/botest/test_netfifo.out 	modified:   test/netfifo/test_runners/Test_fifo_Runners.c 	modified:   test/netfifo/testfifonet.c

--- a/test/botest/Makefile
+++ b/test/botest/Makefile
@@ -17,6 +17,8 @@ SRC1 = \
     ../netfifo/test_runners/all_tests.c \
     ../netfifo/testfifonet.c \
     ../../src/nettcp/bo_fifo.c \
+    ../../src/nettcp/bo_net.c \
+    ../../src/log/bologging.c \
     ../../src/tools/ocrc.c
 
 INC_DIRS = -Isrc -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src \
