modified:   Makefile 	modified:   moxa_serv.cfg 	modified:   src/nettcp/bo_net_fifo_server.c

--- a/moxa_serv.cfg
+++ b/moxa_serv.cfg
@@ -1,13 +1,13 @@
 # 0x42
 
 [sock-serv]
-port = 8888     # номер порта на котором ждем запросы для FIFO
-queue_len = 10  # очередь коннектов
+ port = 8888     # номер порта на котором ждем запросы для FIFO
+ queue_len = 10  # очередь коннектов
 
 [fifo]
-len = 20        # размер очереди
+ len = 20        # размер очереди
 
 [log]
-file = moxa_serv.log  # лог файл
-file_log = moxa_serv.log(old)
-maxrow = 1000
+ file = moxa_serv.log  # лог файл
+ file_log = moxa_serv.log(old)
+ maxrow = 1000         # макс колво строк в лог файле
