new file:   moxa_route/Makefile 	new file:   moxa_route/main.c 	modified:   moxa_serv/Makefile 	new file:   moxa_serv/main.c 	modified:   src/nettcp/bo_net.c 	modified:   src/nettcp/bo_net.h 	modified:   src/nettcp/bo_net_fifo_server.c 	new file:   src/nettcp/bo_net_route_server.c

--- a/moxa_route/Makefile
+++ b/moxa_route/Makefile
@@ -1,8 +1,9 @@
-TARGET		     = build/moxa_serv
+TARGET		     = build/moxa_route
 #CC = arm-elf-gcc
 CC = gcc
 LDFLAGS		     = 
 #LDFLAGS	     = -Wl, -elf2flt
+
 CFLAGS		     = -Wall -c -g
 
 INC_DIR		     = -I../src/log -I../src/tools -I../src/nettcp
@@ -11,21 +12,17 @@ SRC    = main.c
 SRC1   = ../src/tools/dbgout.c
 SRC2   = ../src/log/bologging.c
 SRC3   = ../src/nettcp/bo_net.c
-SRC4   = ../src/nettcp/bo_net_fifo_server.c
-SRC5   = ../src/nettcp/bo_fifo.c
-SRC6   = ../src/nettcp/bo_net_get.c
-SRC7   = ../src/tools/ocfg.c
-SRC8   = ../src/tools/oht.c
+SRC4   = ../src/tools/ocfg.c
+SRC5   = ../src/tools/oht.c
+SRC6   = ../src/nettcp/bo_net_route_server.c
 
 OBJ    = build/main.o
 OBJ1   = build/dbgout.o
 OBJ2   = build/bologging.o
 OBJ3   = build/bo_net.o
-OBJ4   = build/bo_net_fifo_server.o
-OBJ5   = build/bo_fifo.o
-OBJ6   = build/bo_net_get.o
-OBJ7   = build/ocfg.o
-OBJ8   = build/oht.o
+OBJ4   = build/ocfg.o
+OBJ5   = build/oht.o
+OBJ6   = build/bo_net_route_server.o
 
 default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC1) -o $(OBJ1)
@@ -34,12 +31,10 @@ default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC4) -o $(OBJ4)	
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC5) -o $(OBJ5)	
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC6) -o $(OBJ6)	
-	$(CC) $(INC_DIR) $(CFLAGS) $(SRC7) -o $(OBJ7)	
-	$(CC) $(INC_DIR) $(CFLAGS) $(SRC8) -o $(OBJ8)	
 
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC)  -o $(OBJ)
 	$(CC) $(LDFLAGS) -g $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) \
-	      $(OBJ6) $(OBJ7) $(OBJ8)  $(OBJ) -o $(TARGET)
+	      $(OBJ6) $(OBJ) -o $(TARGET)
 
 memtrace:
 	MALLOC_TRACE=trace.log $(TARGET)
@@ -48,3 +43,4 @@ memtrace:
 clean:
 	rm -R build
 	mkdir build
+	
