modified:   moxa_route/Makefile 	new file:   moxa_route/send.sh 	modified:   src/nettcp/bo_net.c 	modified:   src/nettcp/bo_net.h 	modified:   src/nettcp/bo_net_fifo_server.c 	modified:   src/nettcp/bo_net_get.c 	modified:   src/nettcp/bo_net_route_server.c 	modified:   test/botest/Makefile 	new file:   test/netroute/test_runners/Test_route_Runners.c 	new file:   test/netroute/test_runners/all_tests.c 	new file:   test/netroute/testroutenet.c

--- a/moxa_route/Makefile
+++ b/moxa_route/Makefile
@@ -15,6 +15,7 @@ SRC3   = ../src/nettcp/bo_net.c
 SRC4   = ../src/tools/ocfg.c
 SRC5   = ../src/tools/oht.c
 SRC6   = ../src/nettcp/bo_net_route_server.c
+SRC7   = ../src/tools/ocrc.c
 
 OBJ    = build/main.o
 OBJ1   = build/dbgout.o
@@ -23,6 +24,7 @@ OBJ3   = build/bo_net.o
 OBJ4   = build/ocfg.o
 OBJ5   = build/oht.o
 OBJ6   = build/bo_net_route_server.o
+OBJ7   = build/ocrc.o
 
 default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC1) -o $(OBJ1)
@@ -31,10 +33,11 @@ default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC4) -o $(OBJ4)	
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC5) -o $(OBJ5)	
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC6) -o $(OBJ6)	
+	$(CC) $(INC_DIR) $(CFLAGS) $(SRC7) -o $(OBJ7)	
 
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC)  -o $(OBJ)
 	$(CC) $(LDFLAGS) -g $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) \
-	      $(OBJ6) $(OBJ) -o $(TARGET)
+	      $(OBJ6) $(OBJ7) $(OBJ) -o $(TARGET)
 
 memtrace:
 	MALLOC_TRACE=trace.log $(TARGET)
