modified:   moxa_route/Makefile 	modified:   moxa_serv/main.c 	modified:   src/log/bologging.c 	modified:   src/main.c 	modified:   src/nettcp/bo_net.h 	modified:   src/nettcp/bo_net_get.c 	new file:   src/nettcp/bo_net_get_route.c 	modified:   src/nettcp/bo_net_route_server.c 	modified:   test/botest/Makefile 	modified:   test/netfifo/testfifonet.c 	modified:   test/netroute/test_runners/Test_route_Runners.c 	modified:   test/netroute/testroutenet.c

--- a/test/botest/Makefile
+++ b/test/botest/Makefile
@@ -28,6 +28,7 @@ SRC2 = \
     ../netroute/testroutenet.c \
     ../../src/log/bologging.c \
     ../../src/nettcp/bo_net.c \
+    ../../src/nettcp/bo_net_get_route.c \
     ../../src/tools/ocrc.c \
     ../../src/tools/dbgout.c
 
