modified:   .gitignore 	modified:   master/Makefile 	modified:   src/nettcp/bo_net.c 	modified:   src/nettcp/bo_net.h 	modified:   src/nettcp/bo_net_master.c 	modified:   src/nettcp/bo_net_master_core.c 	modified:   src/nettcp/bo_net_master_core.h 	modified:   src/nettcp/bo_net_route_server.c 	modified:   src/tools/listsock.c 	modified:   src/tools/listsock.h 	modified:   test/botest/Makefile 	new file:   test/master/test_runners/Test_master_Runners.c 	new file:   test/master/test_runners/all_tests.c 	new file:   test/master/testmaster.c

--- a/master/Makefile
+++ b/master/Makefile
@@ -15,6 +15,9 @@ SRC3   = ../src/nettcp/bo_net_master.c
 SRC4   = ../src/tools/oht.c
 SRC5   = ../src/tools/ocfg.c
 SRC6   = ../src/nettcp/bo_net.c
+SRC7   = ../src/tools/listsock.c
+SRC8   = ../src/nettcp/bo_net_master_core.c
+SRC9   = ../src/tools/ocrc.c
 
 OBJ    = build/main.o
 OBJ1   = build/bologging.o
@@ -23,6 +26,10 @@ OBJ3   = build/bo_net_master.o
 OBJ4   = build/oht.o
 OBJ5   = build/ocfg.o
 OBJ6   = build/bo_net.o
+OBJ7   = build/listsock.o
+OBJ8   = build/bo_net_master_core.o
+OBJ9   = build/ocrc.o
+
 default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC1)  -o $(OBJ1)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC2)  -o $(OBJ2)
@@ -30,10 +37,13 @@ default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC4)  -o $(OBJ4)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC5)  -o $(OBJ5)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC6)  -o $(OBJ6)
+	$(CC) $(INC_DIR) $(CFLAGS) $(SRC7)  -o $(OBJ7)
+	$(CC) $(INC_DIR) $(CFLAGS) $(SRC8)  -o $(OBJ8)
+	$(CC) $(INC_DIR) $(CFLAGS) $(SRC9)  -o $(OBJ9)
 
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC)  -o $(OBJ)
 	$(CC) $(LDFLAGS) -g $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) \
-	      $(OBJ5) $(OBJ6) $(OBJ) -o $(TARGET)
+	      $(OBJ5) $(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ) -o $(TARGET)
 
 memtrace:
 	MALLOC_TRACE=trace.log $(TARGET)
