--- a/test/botest/Makefile
+++ b/test/botest/Makefile
@@ -44,6 +44,16 @@ SRC4 = \
     ../llist/testllist.c \
     ../../src/tools/listsock.c
 
+SRC5 = \
+    ../master/test_runners/Test_master_Runners.c \
+    ../master/test_runners/all_tests.c \
+    ../master/testmaster.c \
+    ../../src/log/bologging.c \
+    ../../src/nettcp/bo_net.c \
+    ../../src/nettcp/bo_net_get_route.c \
+    ../../src/tools/ocrc.c \
+    ../../src/tools/dbgout.c
+
 INC_DIRS = -Isrc -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src \
 -Isrc/nettcp -Isrc/tools
 
@@ -64,5 +74,9 @@ log:
 	$(CC) $(INC_DIRS) $(SRC_FILES_UNITY) $(SRC3) -o $(TARGET)
 	./$(TARGET)
 
+master:
+	$(CC) $(INC_DIRS) $(SRC_FILES_UNITY) $(SRC5) -o $(TARGET)
+	./$(TARGET)
+	
 clean:
 	rm $(TARGET)
