modified:   cls_event/main.c 	modified:   master/Makefile 	modified:   master/main.c 	modified:   moxa_serv/main.c 	modified:   src/nettcp/bo_net_master.c 	modified:   src/tools/listsock.h

--- a/master/Makefile
+++ b/master/Makefile
@@ -1,8 +1,8 @@
 TARGET		     = build/master
-#CC = arm-elf-gcc
-CC = gcc
-LDFLAGS		     = 
-#LDFLAGS	     = -Wl, -elf2flt
+CC = arm-elf-gcc
+#CC = gcc
+#LDFLAGS		     = 
+LDFLAGS	     = -Wl, -elf2flt
 
 CFLAGS		     = -Wall -c -g
 
