modified:   master/Makefile 	modified:   src/nettcp/bo_net_master.c 	modified:   src/tools/listsock.c 	modified:   src/tools/listsock.h 	modified:   src/tools/oht.c 	modified:   test/netroute/test_runners/Test_route_Runners.c 	modified:   test/netroute/testroutenet.c

--- a/master/Makefile
+++ b/master/Makefile
@@ -1,9 +1,11 @@
 TARGET		     = build/master
-CC = arm-elf-gcc
-#CC = gcc
+
+#CC = arm-elf-gcc
+#LDFLAGS	     = -Wl, -elf2flt
+
+CC = gcc
 LDFLAGS		     = 
 
-LDFLAGS	     = -Wl, -elf2flt
 CFLAGS		     = -Wall -c -g
 
 INC_DIR		     = -I../src/log -I../src/tools -I../src/nettcp
