modified:   master/Makefile 	modified:   src/nettcp/bo_net_master.c 	modified:   src/nettcp/bo_net_master_core.c 	modified:   src/tools/dbgout.c 	modified:   src/tools/listsock.c 	modified:   src/tools/listsock.h 	modified:   test/master/stress_1/main.c

--- a/master/Makefile
+++ b/master/Makefile
@@ -20,6 +20,7 @@ SRC6   = ../src/nettcp/bo_net.c
 SRC7   = ../src/tools/listsock.c
 SRC8   = ../src/nettcp/bo_net_master_core.c
 SRC9   = ../src/tools/ocrc.c
+SRC10  = ../src/tools/ort.c
 
 OBJ    = build/main.o
 OBJ1   = build/bologging.o
@@ -31,6 +32,7 @@ OBJ6   = build/bo_net.o
 OBJ7   = build/listsock.o
 OBJ8   = build/bo_net_master_core.o
 OBJ9   = build/ocrc.o
+OBJ10  = build/ort.o
 
 default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC1)  -o $(OBJ1)
@@ -42,10 +44,12 @@ default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC7)  -o $(OBJ7)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC8)  -o $(OBJ8)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC9)  -o $(OBJ9)
+	$(CC) $(INC_DIR) $(CFLAGS) $(SRC10) -o $(OBJ10)
 
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC)  -o $(OBJ)
-	$(CC) $(LDFLAGS) -g $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) \
-	      $(OBJ5) $(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ) -o $(TARGET)
+	$(CC) $(LDFLAGS) -g   $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) \
+	      $(OBJ5) $(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ10) \
+	      $(OBJ) -o $(TARGET)
 
 memtrace:
 	MALLOC_TRACE=trace.log $(TARGET)
