modified:   master/Makefile 	modified:   moxa_serv/Makefile 	modified:   src/nettcp/bo_fifo.c 	modified:   src/nettcp/bo_net_master.c

--- a/master/Makefile
+++ b/master/Makefile
@@ -1,10 +1,10 @@
 TARGET		     = build/master
 
-#CC = arm-elf-gcc
-#LDFLAGS	     = -Wl, -elf2flt
+CC = arm-elf-gcc
+LDFLAGS	     = -Wl, -elf2flt -lpthread
 
-CC = gcc
-LDFLAGS		     = -lpthread
+#CC = gcc
+#LDFLAGS		     = -lpthread
 
 CFLAGS		     = -Wall -c -g
 
