modified:   src/nettcp/bo_net.c 	modified:   src/nettcp/bo_net.h 	modified:   src/nettcp/bo_net_master.c 	modified:   src/nettcp/bo_net_master_core.c 	modified:   src/nettcp/bo_net_master_core.h 	modified:   test/master/stress_1/Makefile 	modified:   test/master/stress_1/main.c 	modified:   test/netroute/test_runners/Test_route_Runners.c 	modified:   test/netroute/testroutenet.c

--- a/test/master/stress_1/Makefile
+++ b/test/master/stress_1/Makefile
@@ -16,4 +16,4 @@ SRC1 = \
     main.c
 
 default:
-	$(CC) -lpthread $(INC_DIRS) $(SRC1) -o $(TARGET)
+	$(CC)  $(INC_DIRS) $(SRC1) -lpthread -o $(TARGET)
