new file:   src/nettcp/bo_cycle_arr.c 	new file:   src/nettcp/bo_cycle_arr.h 	modified:   src/nettcp/bo_fifo.c 	modified:   src/nettcp/bo_net_master_core.c 	modified:   src/nettcp/bo_net_master_core.h 	modified:   test/botest/Makefile 	new file:   test/cycarr/test_runners/Test_cycarr_Runners.c 	new file:   test/cycarr/test_runners/all_tests.c 	new file:   test/cycarr/testcycarr.c 	modified:   test/netfifo/testfifonet.c

--- a/test/botest/Makefile
+++ b/test/botest/Makefile
@@ -56,6 +56,12 @@ SRC5 = \
     ../../src/tools/ocrc.c \
     ../../src/tools/dbgout.c
 
+SRC6 = \
+    ../cycarr/test_runners/Test_cycarr_Runners.c \
+    ../cycarr/test_runners/all_tests.c \
+    ../cycarr/testcycarr.c             \
+    ../../src/nettcp/bo_cycle_arr.c    
+
 INC_DIRS = -Isrc -I$(UNITY_ROOT)/src -I$(UNITY_ROOT)/extras/fixture/src \
 -Isrc/nettcp -Isrc/tools
 
@@ -79,6 +85,10 @@ log:
 master:
 	$(CC) $(INC_DIRS) $(SRC_FILES_UNITY) $(SRC5) -o $(TARGET)
 	./$(TARGET)
-	
+
+cycarr:
+	$(CC) $(INC_DIRS) $(SRC_FILES_UNITY) $(SRC6) -o $(TARGET)
+	./$(TARGET)
+
 clean:
 	rm $(TARGET)
