--- a/moxa_serv/Makefile
+++ b/moxa_serv/Makefile
@@ -1,8 +1,8 @@
 TARGET		     = build/moxa_serv
-CC = arm-elf-gcc
-#CC = gcc
-#LDFLAGS		     = -lpthread
-LDFLAGS	     = -Wl, -elf2flt, -lpthread
+#CC = arm-elf-gcc
+CC = gcc
+LDFLAGS		     = -lpthread
+#LDFLAGS	     = -Wl, -elf2flt, -lpthread
 CFLAGS		     = -Wall -c -g
 
 INC_DIR		     = -I../src/log -I../src/tools -I../src/nettcp
