modified:   snmp/Makefile 	new file:   src/netudp/bo_udp.c 	new file:   src/netudp/bo_udp.h 	modified:   src/snmp/bo_asn.c 	modified:   src/snmp/bo_snmp.c 	modified:   src/snmp/bo_snmp.h 	modified:   src/snmp/bo_snmp_mng.c

--- a/snmp/Makefile
+++ b/snmp/Makefile
@@ -5,7 +5,7 @@ LDFLAGS		     = -lpthread
 #LDFLAGS	     = -Wl, -elf2flt, -lpthread
 CFLAGS		     = -Wall -c -g
 
-INC_DIR		     = -I../src/log -I../src/tools -I../src/nettcp -I../src/snmp
+INC_DIR		     = -I../src/log -I../src/tools -I../src/nettcp -I../src/snmp -I../src/netudp
 
 SRC    = main.c
 SRC1   = ../src/tools/dbgout.c
@@ -13,6 +13,7 @@ SRC2   = ../src/log/bologging.c
 SRC3   = ../src/snmp/bo_snmp_mng.c
 SRC4   = ../src/snmp/bo_asn.c
 SRC5   = ../src/snmp/bo_snmp.c
+SRC6   = ../src/netudp/bo_udp.c
 
 OBJ    = build/main.o
 OBJ1   = build/dbgout.o
@@ -20,6 +21,7 @@ OBJ2   = build/bologging.o
 OBJ3   = build/bo_snmp_mng.o
 OBJ4   = build/bo_asn.o
 OBJ5   = build/bo_snmp.o
+OBJ6   = build/bo_udp.o
 
 default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC1) -o $(OBJ1)
@@ -27,10 +29,11 @@ default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC3) -o $(OBJ3)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC4) -o $(OBJ4)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC5) -o $(OBJ5)
+	$(CC) $(INC_DIR) $(CFLAGS) $(SRC6) -o $(OBJ6)
 
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC)  -o $(OBJ)
 	$(CC) $(LDFLAGS) -g $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) \
-	$(OBJ5) $(OBJ) -o $(TARGET)
+	$(OBJ5) $(OBJ6) $(OBJ) -o $(TARGET)
 
 memtrace:
 	MALLOC_TRACE=trace.log $(TARGET)
