modified:   master/Makefile 	new file:   master/README 	modified:   src/snmp/bo_asn.c 	modified:   test/master/stress_1/Makefile 	modified:   test/master/stress_1/main.c

--- a/test/master/stress_1/Makefile
+++ b/test/master/stress_1/Makefile
@@ -12,6 +12,8 @@ SRC1 = \
     ../../../src/tools/dbgout.c  \
     ../../../src/tools/ocrc.c    \
     ../../../src/tools/oht.c     \
+    ../../../src/nettcp/bo_cycle_arr.c \
+    ../../../src/nettcp/bo_net_master_core_log.c \
     ../../../src/nettcp/bo_net_master_core.c \
     main.c
 
