modified:   master/Makefile 	modified:   moxa_serv/Makefile 	modified:   src/nettcp/bo_fifo.c 	modified:   src/nettcp/bo_fifo.h 	modified:   src/nettcp/bo_net_fifo_server.c 	modified:   src/nettcp/bo_net_get.c 	modified:   src/nettcp/bo_net_master.c 	modified:   src/nettcp/bo_net_master_core.c 	modified:   src/nettcp/bo_net_master_core.h 	modified:   src/nettcp/bo_net_master_core_log.c 	modified:   src/nettcp/bo_net_master_core_log.h 	renamed:    src/nettcp/bo_net_get_route.c -> src/nettcp/depricated/bo_net_get_route.c 	renamed:    src/nettcp/bo_net_route_server.c -> src/nettcp/depricated/bo_net_route_server.c 	modified:   src/tools/dbgout.c 	modified:   test/botest/Makefile 	modified:   test/netfifo/test_runners/Test_fifo_Runners.c 	modified:   test/netfifo/testfifonet.c

--- a/master/Makefile
+++ b/master/Makefile
@@ -6,7 +6,11 @@ TARGET		     = build/master
 CC = gcc
 LDFLAGS		     = -lpthread
 # ========================================
-CFLAGS		     = -Wall -c -g
+CFLAGS		     = -Wall -c -g 
+
+# Выводит отлад инфу в терминал
+CFLAGS		     += -D __PRINT__ 
+# =========================================
 
 INC_DIR		     = -I../src/log -I../src/tools -I../src/nettcp
 
