--- a/mslave/moxa/Makefile
+++ b/mslave/moxa/Makefile
@@ -4,7 +4,11 @@
 
 
 CC = arm-elf-gcc
-CFLAGS = -O2 -fomit-frame-pointer -fno-builtin -fpic -msingle-pic-base -D MOXA_TARGET
+CFLAGS = -O2 -fomit-frame-pointer -fno-builtin -fpic -msingle-pic-base
+CFLAGS += -D __MOXA_TARGET__
+#CFLAGS += -D __WDT__
+CFLAGS += -D __PRINT__
+
 LDFLAGS =  -Wl,-elf2flt="-r -z -s 32768"
 INC_DIRS = -I/usr/local/arm-elf/include -I../ -I../../src/log \
 	-I../../src/lib -I../../src/tools -I../../src/nettcp -I../slave
@@ -24,9 +28,12 @@ SRC12 = ../../src/nettcp/bo_net_get.c
 SRC13 = ../../src/nettcp/bo_net_master_core.c
 SRC14 = ../../src/nettcp/bo_cycle_arr.c
 SRC15 = ../../src/nettcp/bo_net_master_core_log.c
+SRC16 = ../../src/nettcp/bo_net_fifo_server.c
+SRC17 = ../../src/nettcp/bo_fifo.c
 SRC_SL1 = ../slave/slave.c
 SRC_SL2 = ../slave/ch1_threads.c
 SRC_SL3 = ../slave/ch2_threads.c
+SRC_SL4 = ../slave/a_threads.c
 
 SRC_T1 = ../mslave.c
 
@@ -45,9 +52,12 @@ OBJ12 = build/bo_net_get.o
 OBJ13 = build/bo_net_master_core.o
 OBJ14 = build/bo_cycle_arr.o
 OBJ15 = build/bo_net_master_core_log.o
+OBJ16 = build/bo_net_fifo_server.o
+OBJ17 = build/bo_fifo.o
 OBJ_SL1 = build/slave.o
 OBJ_SL2 = build/ch1_threads.o
 OBJ_SL3 = build/ch2_threads.o
+OBJ_SL4 = build/a_threads.o
 
 OBJ_T1 = build/mslave.o
 
@@ -72,21 +82,24 @@ default:
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC13) -o $(OBJ13)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC14) -o $(OBJ14)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC15) -o $(OBJ15)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC16) -o $(OBJ16)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC17) -o $(OBJ17)
 
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL1) -o $(OBJ_SL1)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL2) -o $(OBJ_SL2)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL3) -o $(OBJ_SL3)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL4) -o $(OBJ_SL4)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_T1) -o $(OBJ_T1)
 
 	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) \
 		$(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) \
-		$(OBJ13) $(OBJ14) $(OBJ15) \
-		$(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_T1) -o $(T1) \
-		-lpthread
+		$(OBJ13) $(OBJ14) $(OBJ15) $(OBJ16) $(OBJ17) \
+		$(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) \
+		$(OBJ_T1) -o $(T1) -lpthread
 
 clean:
 	rm -f $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) $(OBJ6) $(OBJ7) \
 		$(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) $(OBJ13) $(OBJ14) \
-		$(OBJ15)
-	rm -f $(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_T1) $(T1)
+		$(OBJ15) $(OBJ16) $(OBJ17)
+	rm -f $(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) $(OBJ_T1) $(T1)
 
