--- a/mslave/pc/Makefile
+++ b/mslave/pc/Makefile
@@ -7,7 +7,7 @@ CC = gcc
 
 #CFLAGS = -O2 -Wall -g -fPIC
 #CFLAGS = -Wall -g -fPIC -ansi -pedantic
-CFLAGS = -Wall -g -fPIC -D PC_TARGET
+CFLAGS = -Wall -g -fPIC
 LDFLAGS = 
 INC_DIRS = -I/usr/include -I/usr/local/include -I../ -I../../src/log \
 	-I../../src/lib -I../../src/tools -I../../src/nettcp -I../slave
@@ -26,9 +26,11 @@ SRC11 = ../../src/nettcp/bo_net_get.c
 SRC12 = ../../src/nettcp/bo_net_master_core.c
 SRC13 = ../../src/nettcp/bo_cycle_arr.c
 SRC14 = ../../src/nettcp/bo_net_master_core_log.c
+SRC15 = ../../src/nettcp/bo_net_fifo_server.c
 SRC_SL1 = ../slave/slave.c
 SRC_SL2 = ../slave/ch1_threads.c
 SRC_SL3 = ../slave/ch2_threads.c
+SRC_SL4 = ../slave/a_threads.c
 
 SRC_T1 = ../mslave.c
 
@@ -46,9 +48,11 @@ OBJ11 = build/bo_net_get.o
 OBJ12 = build/bo_net_master_core.o
 OBJ13 = build/bo_cycle_arr.o
 OBJ14 = build/bo_net_master_core_log.o
+OBJ15 = build/bo_net_fifo_server.o
 OBJ_SL1 = build/slave.o
 OBJ_SL2 = build/ch1_threads.o
 OBJ_SL3 = build/ch2_threads.o
+OBJ_SL4 = build/a_threads.o
 
 OBJ_T1 = build/mslave.o
 
@@ -72,19 +76,22 @@ default:
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC12) -o $(OBJ12)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC13) -o $(OBJ13)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC14) -o $(OBJ14)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC15) -o $(OBJ15)
 
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL1) -o $(OBJ_SL1)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL2) -o $(OBJ_SL2)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL3) -o $(OBJ_SL3)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL4) -o $(OBJ_SL4)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_T1) -o $(OBJ_T1)
 
 	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) \
 		$(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) \
-		$(OBJ13) $(OBJ14) \
-		$(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_T1) -o $(T1) -lpthread
+		$(OBJ13) $(OBJ14) $(OBJ15) \
+		$(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) \
+		$(OBJ_T1) -o $(T1) -lpthread
 
 clean:
-	rm -f $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) $(OBJ6) $(OBJ7) \
-		$(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) $(OBJ13) $(OBJ14)
-	rm -f $(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_T1) $(T1)
+	rm -f $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) $(OBJ6) $(OBJ7) $(OBJ8) \
+		$(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) $(OBJ13) $(OBJ14) $(OBJ15)
+	rm -f $(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) $(OBJ_T1) $(T1)
 
