modified:   snmp/Makefile 	modified:   src/nettcp/bo_net_fifo_server.c 	modified:   src/snmp/bo_asn.c 	modified:   src/snmp/bo_asn.h 	new file:   src/snmp/bo_parse.c 	new file:   src/snmp/bo_parse.h 	modified:   src/snmp/bo_snmp.c 	modified:   src/snmp/bo_snmp.h 	modified:   src/snmp/bo_snmp_mng.c

--- a/snmp/Makefile
+++ b/snmp/Makefile
@@ -14,6 +14,7 @@ SRC3   = ../src/snmp/bo_snmp_mng.c
 SRC4   = ../src/snmp/bo_asn.c
 SRC5   = ../src/snmp/bo_snmp.c
 SRC6   = ../src/netudp/bo_udp.c
+SRC7   = ../src/snmp/bo_parse.c
 
 OBJ    = build/main.o
 OBJ1   = build/dbgout.o
@@ -22,6 +23,7 @@ OBJ3   = build/bo_snmp_mng.o
 OBJ4   = build/bo_asn.o
 OBJ5   = build/bo_snmp.o
 OBJ6   = build/bo_udp.o
+OBJ7   = build/bo_parse.o
 
 default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC1) -o $(OBJ1)
@@ -30,10 +32,11 @@ default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC4) -o $(OBJ4)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC5) -o $(OBJ5)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC6) -o $(OBJ6)
+	$(CC) $(INC_DIR) $(CFLAGS) $(SRC7) -o $(OBJ7)
 
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC)  -o $(OBJ)
 	$(CC) $(LDFLAGS) -g $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) \
-	$(OBJ5) $(OBJ6) $(OBJ) -o $(TARGET)
+	$(OBJ5) $(OBJ6) $(OBJ7) $(OBJ) -o $(TARGET)
 
 memtrace:
 	MALLOC_TRACE=trace.log $(TARGET)
