--- a/mslave/moxa/Makefile
+++ b/mslave/moxa/Makefile
@@ -11,7 +11,8 @@ CFLAGS += -D __PRINT__
 
 LDFLAGS =  -Wl,-elf2flt="-r -z -s 32768"
 INC_DIRS = -I/usr/local/arm-elf/include -I../ -I../../src/log \
-	-I../../src/lib -I../../src/tools -I../../src/nettcp -I../slave
+	-I../../src/lib -I../../src/tools -I../../src/nettcp \
+	-I../../src/netudp -I../../src/snmp -I../slave
 
 SRC1 = ../../src/log/bologging.c
 SRC2 = ../../src/lib/serial.c
@@ -30,6 +31,11 @@ SRC14 = ../../src/nettcp/bo_cycle_arr.c
 SRC15 = ../../src/nettcp/bo_net_master_core_log.c
 SRC16 = ../../src/nettcp/bo_net_fifo_server.c
 SRC17 = ../../src/nettcp/bo_fifo.c
+SRC18 = ../../src/snmp/bo_asn.c
+SRC19 = ../../src/snmp/bo_parse.c
+SRC20 = ../../src/snmp/bo_snmp.c
+SRC21 = ../../src/snmp/bo_snmp_mng.c
+SRC22 = ../../src/netudp/bo_udp.c
 SRC_SL1 = ../slave/slave.c
 SRC_SL2 = ../slave/ch1_threads.c
 SRC_SL3 = ../slave/ch2_threads.c
@@ -54,6 +60,11 @@ OBJ14 = build/bo_cycle_arr.o
 OBJ15 = build/bo_net_master_core_log.o
 OBJ16 = build/bo_net_fifo_server.o
 OBJ17 = build/bo_fifo.o
+OBJ18 = build/bo_asn.o
+OBJ19 = build/bo_parse.o
+OBJ20 = build/bo_snmp.o
+OBJ21 = build/bo_snmp_mng.o
+OBJ22 = build/bo_udp.o
 OBJ_SL1 = build/slave.o
 OBJ_SL2 = build/ch1_threads.o
 OBJ_SL3 = build/ch2_threads.o
@@ -84,6 +95,11 @@ default:
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC15) -o $(OBJ15)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC16) -o $(OBJ16)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC17) -o $(OBJ17)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC18) -o $(OBJ18)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC19) -o $(OBJ19)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC20) -o $(OBJ20)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC21) -o $(OBJ21)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC22) -o $(OBJ22)
 
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL1) -o $(OBJ_SL1)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL2) -o $(OBJ_SL2)
@@ -93,13 +109,15 @@ default:
 
 	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) \
 		$(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) \
-		$(OBJ13) $(OBJ14) $(OBJ15) $(OBJ16) $(OBJ17) \
+		$(OBJ13) $(OBJ14) $(OBJ15) $(OBJ16) $(OBJ17) $(OBJ18) $(OBJ19) \
+		$(OBJ20) $(OBJ21) $(OBJ22) \
 		$(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) \
 		$(OBJ_T1) -o $(T1) -lpthread
 
 clean:
 	rm -f $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) $(OBJ6) $(OBJ7) \
 		$(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) $(OBJ13) $(OBJ14) \
-		$(OBJ15) $(OBJ16) $(OBJ17)
+		$(OBJ15) $(OBJ16) $(OBJ17) $(OBJ18) $(OBJ19) \
+		$(OBJ20) $(OBJ21) $(OBJ22)
 	rm -f $(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) $(OBJ_T1) $(T1)
 
