modified:   moxa_serv/Makefile 	modified:   src/log/bologging.c 	modified:   src/log/bologging.h 	modified:   src/nettcp/bo_fifo.c 	modified:   src/nettcp/bo_fifo.h 	modified:   src/nettcp/bo_net_fifo_server.c 	modified:   src/nettcp/bo_net_master.c 	modified:   test/netfifo/test_runners/Test_fifo_Runners.c 	modified:   test/netfifo/testfifonet.c

--- a/moxa_serv/Makefile
+++ b/moxa_serv/Makefile
@@ -9,6 +9,7 @@ LDFLAGS		     = -lpthread
 CFLAGS		     = -Wall -c -g
 # Выводит отлад инфу в терминал
 CFLAGS		     += -D __PRINT__ 
+CFLAGS		     += -D __PRINT_FIFO__
 # =============================================
 
 INC_DIR		     = -I../src/log -I../src/tools -I../src/nettcp
