modified:   src/nettcp/bo_fifo_out.c 	modified:   src/nettcp/bo_fifo_out.h 	modified:   src/nettcp/bo_net_fifo_server.c 	modified:   test/botest/Makefile 	modified:   test/netfifo/test_runners/Test_fifo_Runners.c 	modified:   test/netfifo/testfifonet.c

--- a/test/botest/Makefile
+++ b/test/botest/Makefile
@@ -23,7 +23,8 @@ SRC1 = \
     ../../src/tools/dbgout.c \
     ../../src/nettcp/bo_net_fifo_server.c \
     ../../src/log/bologging.c \
-    ../../src/tools/ocrc.c
+    ../../src/tools/ocrc.c \
+    ../../src/nettcp/bo_fifo_out.c
 
 SRC3 = \
     ../bolog/test_runners/Test_log_Runners.c \
